refactor: Change save method to saveOrUpdate method
